--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to homepage!</h1>
+    <h1>Posts</h1>
+    <form id="add-post-form">
+        <label for="title"></label><br>
+        <input type="text" name="title" id="title"><br>
+        <button type="submit">Add Post</button>
+    </form>
+    <button id="get-post-btn">Get Posts</button>
+    <div id="output"></div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
